better dark mode, img width fix

--- a/assets/_src/sass/main.scss
+++ b/assets/_src/sass/main.scss
@@ -1,15 +1,22 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap");
 
-@import 'mq';
+@import "mq";
 
 :root {
 	--black: #222;
-	--background: linear-gradient(270deg, rgba(0, 0, 0, 0.025) 0%, rgba(0, 0, 0, 0) 100%);
+	--background: linear-gradient(
+		270deg,
+		rgba(0, 0, 0, 0.025) 0%,
+		rgba(0, 0, 0, 0) 100%
+	);
 }
 
-a, button, input, textarea {
+a,
+button,
+input,
+textarea {
 	&:focus {
 		outline: 3px solid rebeccapurple;
 		outline-offset: 3px;
@@ -59,28 +66,34 @@ html {
 	color: green;
 }
 
-
-h1, .h1, h2, .h2 {
+h1,
+.h1,
+h2,
+.h2 {
 	font-size: 2rem;
 	font-weight: bold;
 }
 
-h3, .h3 {
+h3,
+.h3 {
 	font-size: 1.8rem;
 	font-weight: bold;
 }
 
-h4, .h4 {
+h4,
+.h4 {
 	font-size: 1.6rem;
 	font-weight: bold;
 }
 
-h5, .h5 {
+h5,
+.h5 {
 	font-size: 1.4rem;
 	font-weight: bold;
 }
 
-h6, .h6 {
+h6,
+.h6 {
 	font-size: 1.2rem;
 	font-weight: bold;
 }
@@ -117,7 +130,8 @@ li {
 }
 
 article {
-	ul, ol {
+	ul,
+	ol {
 		list-style-position: outside;
 		margin-left: 2em;
 	}
@@ -130,7 +144,6 @@ article {
 		margin-bottom: 2rem;
 	}
 }
-
 
 blockquote {
 	border-left: 3px solid black;
@@ -197,7 +210,6 @@ blockquote {
 	}
 }
 
-
 .comment-list {
 	list-style-type: none;
 
@@ -257,7 +269,7 @@ blockquote {
 			font-size: 1rem;
 
 			&:before {
-				content: " "
+				content: " ";
 			}
 		}
 	}
@@ -278,6 +290,8 @@ blockquote {
 	padding: 0.25rem 0.5rem;
 }
 
-img, video {
+img,
+video {
 	max-width: 100%;
+	height: auto;
 }
